# EMPIRE-Core

./: CMakeLists.txt
EMPIRE_API/src/: ApiWrapperFromCppToC.cpp  CMakeLists.txt  ClientMetaDatabase.cpp  Empire.cpp  Empire.h
EMPIRE_API/src/include/: EMPIRE_API.h
Emperor/: CMakeLists.txt
Emperor/mapperLib/src/: CMakeLists.txt  MapperLib.cpp
Emperor/mapperLib/src/include/: CMakeLists.txt  MapperLib.h
Emperor/src/: Emperor.cpp  ServerCommunication.cpp  main.cpp
Emperor/src/CAGD/: AbstractBSplineBasis1D.h  BSplineBasis1D.cpp  BSplineBasis1D.h  BSplineBasis2D.cpp  IGAControlPoint.h  IGAPatchCurve.cpp  IGAPatchCurve.h  IGAPatchSurface.cpp  IGAPatchSurface.h  IGAPatchSurfaceTrimming.cpp  IGAPatchSurfaceTrimming.h  NurbsBasis1D.cpp  NurbsBasis1D.h  NurbsBasis2D.cpp
Emperor/src/clientCode/: ClientCode.cpp  ClientCode.h
Emperor/src/communication/: ConnectionIO.cpp
Emperor/src/couplingAlgorithm/: .directory  AbstractCouplingAlgorithm.cpp  AbstractCouplingAlgorithm.h  Aitken.cpp  Aitken.h  ConstantRelaxation.cpp  ConstantRelaxation.h  GMRES.cpp  GMRES.h  IJCSA.cpp  IJCSA.h
Emperor/src/couplingLogic/: Connection.cpp  ConvergenceChecker.cpp  ConvergenceChecker.h  IterativeCouplingLoop.cpp
Emperor/src/extrapolating/: LinearExtrapolator.cpp  LinearExtrapolator.h
Emperor/src/fileIO/: GiDFileIO.cpp  GiDIGAFileIO.cpp  GiDIGAFileIO.h  MatlabIGAFileIO.cpp  MatlabIGAFileIO.h
Emperor/src/filtering/: CopyFilter.cpp  CopyFilter.h  DataFieldIntegrationFilter.cpp  DataFieldIntegrationFilter.h  MappingFilter.cpp  WeakCouplingFilter.cpp  WeakCouplingFilter.h
Emperor/src/include/: EMPEROR_Enum.h
Emperor/src/mapping/: AbstractDataFieldIntegration.h  AbstractMapper.h  BarycentricInterpolationMapper.cpp  BarycentricInterpolationMapper.h  CMakeLists.txt  CurveSurfaceMapper.cpp  CurveSurfaceMapper.h  DataFieldIntegration.cpp  DataFieldIntegration.h  DataFieldIntegrationAdapter.cpp  DataFieldIntegrationAdapter.h  DataFieldIntegrationNURBS.cpp  DataFieldIntegrationNURBS.h  IGABarycentricMapper.cpp  IGABarycentricMapper.h  IGAMortarCouplingMatrices.cpp  IGAMortarCouplingMatrices.h  IGAMortarMapper.cpp  IGAMortarMapper.h  KinematicMotion.cpp  KinematicMotion.h  MapperAdapter.cpp  MapperAdapter.h  MortarMapper.cpp  MortarMapper.h  NearestElementMapper.cpp  NearestElementMapper.h  NearestNeighborMapper.cpp  NearestNeighborMapper.h
Emperor/src/mesh/: AbstractCondition.cpp  AbstractCondition.h  AbstractMesh.cpp  AbstractMesh.h  BoundingBox.cpp  BoundingBox.h  DataField.cpp  DataField.h  FEMesh.cpp  FEMesh.h  IGAMesh.cpp  IGAMesh.h  SectionMesh.cpp  SectionMesh.h  WeakIGADirichletCurveCondition.cpp  WeakIGADirichletCurveCondition.h  WeakIGADirichletSurfaceCondition.cpp  WeakIGADirichletSurfaceCondition.h  WeakIGAPatchContinuityCondition.cpp  WeakIGAPatchContinuityCondition.h
Emperor/src/output/: CMakeLists.txt  DataOutput.cpp  Message.cpp  Message.h
Emperor/src/tools/: AuxiliaryFunctions.cpp  AuxiliaryFunctions.h  CMakeLists.txt  ClipperAdapter.cpp  ClipperAdapter.h  TriangulatorAdaptor.cpp  TriangulatorAdaptor.h
Emperor/src/xmlInput/: MetaDataStructures.h  MetaDatabase.cpp
Emperor/testMapper/: TestMapper.cpp
Emperor/testUnit/: TestConnection.cpp  TestFEMesh.cpp  TestMetaDatabase.cpp
Emperor/testUnit/IGAKernel/: TestBSplineBasis1D.cpp  TestIGAMortarTypeProjectionTube.cpp  TestIGAPatchCurve.cpp  TestIGAPatchSurface.cpp  TestIGAPatchSurfaceCurvedPlate.cpp  TestIGAPatchSurfaceTrimming.cpp  TestNurbsBasis1D.cpp  TestNurbsBasis2D.cpp  TestProjectionSemiSphere.cpp
Emperor/testUnit/couplingAlgorithm/: TestConstantRelaxation.cpp  TestRelaxationMethods.cpp
Emperor/testUnit/couplingLogic/: TestConvergenceChecker.cpp  TestLoops.cpp
Emperor/testUnit/extrapolating/: TestExtrapolator.cpp
Emperor/testUnit/files/: inputFileOfTestMetaDatabase.xml
Emperor/testUnit/filtering/: TestAdditionFilter.cpp  TestCopyFilter.cpp  TestLocationFilter.cpp  TestMappingFilter.cpp
Emperor/testUnit/mapping/: TestCurveSurfaceMapper.cpp  TestIGABarycentricMapperCurve.cpp  TestIGAMortarMapperCreateInterfaceGPs.cpp  TestIGAMortarMapperCube.cpp  TestIGAMortarMapperCylinder.cpp  (+11 more)
cmake/modules/: FindMKL.cmake
configure/: bashrc_config  batch_config
interface/matlab/: include_GCC.mk  include_ICC.mk
xmlSchema/: FSIExample.xml  emperorInput.xsd  emperorInputExample.xml
(+30 files in other folders)
